--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="level 1 task 2.css">
+    <link rel="stylesheet" href="index.css">
     <title>My Portfolio</title>
 
 
